replace deprecated constructors like new Double(double) with valueOf